docs/generated/2.10.0-b1/Classnames.md

## API\Request
## Access
## Archive
## ArchiveProcessor
## ArchiveProcessor\Parameters
## AuthResult
## Columns\Dimension
## Common
## Config
## Console
## DataAccess\LogAggregator
## DataTable
## DataTable\BaseFilter
## DataTable\Filter\AddColumnsProcessedMetrics
## DataTable\Filter\AddColumnsProcessedMetricsGoal
## DataTable\Filter\AddSummaryRow
## DataTable\Filter\BeautifyRangeLabels
## DataTable\Filter\BeautifyTimeRangeLabels
## DataTable\Filter\CalculateEvolutionFilter
## DataTable\Filter\ColumnCallbackAddColumn
## DataTable\Filter\ColumnCallbackAddColumnPercentage
## DataTable\Filter\ColumnCallbackAddColumnQuotient
## DataTable\Filter\ColumnCallbackAddMetadata
## DataTable\Filter\ColumnCallbackDeleteRow
## DataTable\Filter\ColumnCallbackReplace
## DataTable\Filter\ColumnDelete
## DataTable\Filter\ExcludeLowPopulation
## DataTable\Filter\GroupBy
## DataTable\Filter\Limit
## DataTable\Filter\MetadataCallbackAddMetadata
## DataTable\Filter\MetadataCallbackReplace
## DataTable\Filter\Pattern
## DataTable\Filter\PatternRecursive
## DataTable\Filter\ReplaceColumnNames
## DataTable\Filter\ReplaceSummaryRowLabel
## DataTable\Filter\Sort
## DataTable\Filter\Truncate
## DataTable\Map
## DataTable\Row
## DataTable\Simple
## Date
## Db
## DbHelper
## Filesystem
## FrontController
## Http
## IP
## Log
## Mail
## Menu\MenuAbstract
## Menu\MenuAdmin
## Menu\MenuReporting
## Menu\MenuTop
## Menu\MenuUser
## Metrics
## Metrics\Formatter
## NoAccessException
## Nonce
## Notification
## Notification\Manager
## Option
## Period
## Period\Range
## Piwik
## Plugin
## Plugin\API
## Plugin\Archiver
## Plugin\Controller
## Plugin\Dimension\ActionDimension
## Plugin\Dimension\ConversionDimension
## Plugin\Dimension\VisitDimension
## Plugin\Manager
## Plugin\Menu
## Plugin\Metric
## Plugin\ProcessedMetric
## Plugin\Report
## Plugin\Segment
## Plugin\Settings
## Plugin\Tasks
## Plugin\ViewDataTable
## Plugin\Visualization
## Plugin\Widgets
## Plugins\CoreHome\Columns\Metrics\AverageTimeOnSite
## Plugins\CoreHome\Columns\Metrics\EvolutionMetric
## Plugins\Installation\SystemCheck
## Plugins\Login\SessionInitializer
## Plugins\UsersManager\UserPreferences
## RankingQuery
## Registry
## ScheduledTask
## ScheduledTime
## ScheduledTime\Daily
## ScheduledTime\Hourly
## ScheduledTime\Monthly
## ScheduledTime\Weekly
## Segment
## SettingsPiwik
## SettingsServer
## Settings\Setting
## Settings\Storage
## Settings\SystemSetting
## Settings\UserSetting
## Singleton
## Site
## TaskScheduler
## Url
## UrlHelper
## Version
## View
## ViewDataTable\Config
## ViewDataTable\Factory
## ViewDataTable\RequestConfig
## View\UIControl
## WidgetsList
